namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: loadtest
  labels:
    name: loadtest
