deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: nginxhello
  name: nginxhello
  annotations:
    fluxcd.io/ignore: "false"
    fluxcd.io/automated: "true"
spec:
  replicas: 5
  selector:
    matchLabels:
      app: nginxhello
  template:
    metadata:
      labels:
        app: nginxhello
    spec:
      containers:
      - image: nbrown/nginxhello:aad042cb
        name: nginxhello
        resources:
          limits:
            cpu: "10m"
        ports:
        - containerPort: 80
        livenessProbe:
          initialDelaySeconds: 2
          periodSeconds: 2
          httpGet:
            port: 80
            path: /healthz/live
        readinessProbe:
          initialDelaySeconds: 2
          periodSeconds: 2
          httpGet:
            port: 80
            path: /healthz/ready
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: helloworld
  name: helloworld
  annotations:
    fluxcd.io/ignore: "false"
    fluxcd.io/automated: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: helloworld
  template:
    metadata:
      labels:
        app: helloworld
      name: helloworld
    spec:
      containers:
      - name: helloworld
        image: gcr.io/google-samples/hello-app:2.0
        ports:
        - containerPort: 80
        imagePullPolicy: Always
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: loadtest
  name: loadtest
  namespace: loadtest
  annotations:
    fluxcd.io/ignore: "false"
    fluxcd.io/automated: "true"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: loadtest
  template:
    metadata:
      labels:
        app: loadtest
      name: loadtest
      namespace: loadtest
    spec:
      containers:
      - name: loadtest
        image: pngan/aspnetcore-kubernetes:1001
        ports:
        - containerPort: 80
        imagePullPolicy: Always
