ipmon-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: ipmon
  name: ipmon
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ipmon
  template:
    metadata:
      labels:
        app: ipmon
    spec:
      containers:
        - args:
            - dotnet
            - NetCore.Docker.dll
          image: pngan/ipmon:latest
          name: ipmon
          resources:
            limits:
              memory: 128Mi
              cpu: 500m
