secrets-test-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: secrets-test
  name: secrets-test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: secrets-test
  template:
    metadata:
      labels:
        app: secrets-test
    spec:
      containers:
        - command: ["/bin/sh"]
          args: ["-c", "echo $OVH_ENDPOINT; echo $OVH_APPLICATION_KEY; echo $OVH_APPLICATION_SECRET; echo $OVH_CONSUMER_KEY; sleep infinity"]
          image: alpine:latest
          name: secrets-test
          resources:
            limits:
              memory: 64Mi
              cpu: 500m
