seqserver.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: seqserver
spec:
  ports:
  - name: "8020"
    port: 8020
    targetPort: 80
  - name: "5341"
    port: 5341
    targetPort: 5341
  selector:
    app: seqserver
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: seqserver
  name: seqserver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: seqserver
  template:
    metadata:
      labels:
        app: seqserver
    spec:
      containers:
      - env:
        - name: ACCEPT_EULA
          value: "Y"
        image: datalust/seq:latest
        name: seq
        ports:
        - containerPort: 80
        - containerPort: 5341
        resources:
          limits:
            memory: 128Mi
            cpu: 500m
        volumeMounts:
        - mountPath: /data
          name: logdata
      restartPolicy: Always
      volumes:
      - name: logdata
        persistentVolumeClaim:
          claimName: logdata
