service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nginxhello
  name: nginxhello
  annotations:
    fluxcd.io/ignore: "false"
    fluxcd.io/automated: "true"
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8003
  selector:
    app: nginxhello
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: helloworld
  name: helloworld
  annotations:
    fluxcd.io/ignore: "false"
    fluxcd.io/automated: "true"
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8002
  selector:
    app: helloworld
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: loadtest
  name: loadtest
  namespace: loadtest
  annotations:
    fluxcd.io/ignore: "false"
    fluxcd.io/automated: "true"
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: loadtest
