sqlserver.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sqlserver
  labels:
    app: sqlserver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sqlserver
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: sqlserver
    spec:
      containers:
        - image: mcr.microsoft.com/mssql/server:2019-latest
          name: sql1
          ports:
            - containerPort: 1433
          resources:
            limits:
              memory: "1Gi"
              cpu: "1"
            requests:
              memory: "500Mi"
              cpu: "500m"
          volumeMounts:
            - mountPath: /var/opt/mssql
              name: sqldata
      restartPolicy: Always
      volumes:
        - name: sqldata
          persistentVolumeClaim:
            claimName: sqldata
status: {}
---
apiVersion: v1
kind: Service
metadata:
  name: sqlserver
spec:
  ports:
    - name: "1433"
      port: 1433
      targetPort: 1433
status:
  loadBalancer: {}
---
apiVersion: v1
kind: Service
metadata:
  name: sqlserver-nodeport
spec:
  type: NodePort
  selector:
    app: sqlserver
  ports:
    - protocol: TCP
      port: 1433
      targetPort: 1433
      nodePort: 31433
